--- a/src/app/components/ingredient/ingredient-table/ingredient.component.scss
+++ b/src/app/components/ingredient/ingredient-table/ingredient.component.scss
@@ -17,10 +17,15 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
-
+    @media (max-width: 900px) {
+      margin-bottom: 0px;
+    }
     .filter-field {
       width: 200px;
       display: -webkit-box;
+      @media (max-width: 900px) {
+        display: unset;
+      }
     }
 
     .add-ingredient-button {
