--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -2,20 +2,24 @@
   max-width: 320px;
   margin: 0 auto;
   padding: 20px;
-}
+  display: flex;
+  flex-direction: column;
 
-.login_title {
-  margin: 15px 0;
-}
+  .login_title {
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: 700;
+  }
 
-.login_input {
-  width: 100%;
-}
+  .login_input {
+    width: 100%;
+  }
 
-.login_title {
-  margin-bottom: 15px;
-}
+  .login_title {
+    margin-bottom: 15px;
+  }
 
-.error {
-  margin-top: 20px;
+  .error {
+    margin-top: 20px;
+  }
 }
