--- a/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
+++ b/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
@@ -3,12 +3,33 @@
     <button mat-button color="primary" (click)="goBack()">Back</button>
   </div>
   <div class="title_container">Quantity {{ ingredintName }}</div>
+
+  <div class="actions_container">
+    <button
+      mat-raised-button
+      color="primary"
+      printSectionId="quantities"
+      ngxPrint
+      styleSheetFile="src/assets/css/print-table.css"
+    >
+      Print Table
+    </button>
+    <div class="export-dropdown">
+      <button mat-raised-button color="primary" (click)="toggleExportMenu()">
+        Export
+      </button>
+      <div class="export-menu" *ngIf="showExportMenu">
+        <button mat-button (click)="exportToCSV()">CSV</button>
+        <button mat-button (click)="exportToXLSX()">XLSX</button>
+        <button mat-button (click)="exportToPDF()">PDF</button>
+      </div>
+    </div>
+  </div>
   <div class="filter-container">
     <mat-form-field class="filter-field">
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" #input />
     </mat-form-field>
-
     <button
       mat-raised-button
       color="primary"
@@ -20,7 +41,7 @@
     </button>
   </div>
 
-  <div class="mat-elevation-z8 quantities_container">
+  <div id="quantities" class="mat-elevation-z8 quantities_container">
     <table mat-table [dataSource]="dataSource" matSort>
       <!-- ID Column -->
       <ng-container matColumnDef="id">
@@ -40,11 +61,36 @@
         <td mat-cell *matCellDef="let row">{{ row.unit }}</td>
       </ng-container>
 
+      <!-- Price Column -->
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price/Unit</th>
+        <td mat-cell *matCellDef="let row">{{ row.price }}</td>
+      </ng-container>
+
+      <!-- Currency Column -->
+      <ng-container matColumnDef="currency">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Currency</th>
+        <td mat-cell *matCellDef="let row">{{ row.currency }}</td>
+      </ng-container>
+
       <!-- Expiring Date Column -->
       <ng-container matColumnDef="expiringDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Expiring Date</th>
-        <td mat-cell *matCellDef="let row">
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [ngClass]="{
+            'expiring-soon': isExpiringSoon(row.expiringDate),
+            expired: isExpired(row.expiringDate)
+          }"
+        >
           {{ row.expiringDate | date : "yyyy-MM-dd" }}
+          <mat-icon class="status-icon" *ngIf="isExpiringSoon(row.expiringDate)"
+            >warning</mat-icon
+          >
+          <mat-icon class="status-icon" *ngIf="isExpired(row.expiringDate)"
+            >error</mat-icon
+          >
         </td>
       </ng-container>
 
@@ -87,7 +133,9 @@
         </td>
       </tr>
     </table>
-
+    <div *ngIf="isLoading" class="loading-circle-container">
+      <mat-spinner diameter="100"></mat-spinner>
+    </div>
     <mat-paginator
       [pageSizeOptions]="[5, 10, 25, 100]"
       aria-label="Select page of users"
