--- a/src/app/components/recipe/recipe-details/recipe-details.component.scss
+++ b/src/app/components/recipe/recipe-details/recipe-details.component.scss
@@ -1,23 +1,48 @@
 .container {
   display: flex;
   justify-content: center;
+  padding: 20px;
+
+  .buttons_container {
+    padding: 10px 0 20px;
+    display: flex;
+    justify-content: space-between;
+  }
 
   .recipe-details {
-    width: 80%;
     padding: 20px;
-    background-color: #f8f9fa;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+
+    &__info {
+      ul {
+        margin-left: 20px;
+      }
+    }
+
+    &__picture {
+      display: flex;
+      justify-content: center;
+      margin: 20px 0;
+      img {
+        object-fit: fill;
+        width: 400px;
+        height: 400px;
+      }
+    }
 
     &__title {
-      font-size: 24px;
+      font-size: 60px;
       font-weight: bold;
-      margin-bottom: 10px;
+      margin: 50px 0;
     }
 
     &__description {
       font-size: 16px;
       margin-bottom: 20px;
+    }
+
+    &__content {
+      margin-left: 20px;
     }
 
     &__section {
@@ -42,22 +67,18 @@
       }
     }
 
-    &__actions {
+    &__quantity {
       display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
+      flex-direction: column;
+      padding: 20px;
 
-      &__quantity {
-        display: flex;
-        flex-direction: column;
+      button {
+        margin-left: 15px;
       }
 
-      &__quantity-label {
-        margin-bottom: 5px;
-      }
-
-      &__quantity-input {
-        margin-bottom: 10px;
+      &__input {
+        margin-top: 15px;
+        max-width: fit-content;
       }
     }
   }
