--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,8 @@ html {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.loading-circle-container {
+  display: flex;
+  justify-content: center;
+}
