add currency switcher + send email + statistics page

--- a/src/app/components/category/category-table/category.component.scss
+++ b/src/app/components/category/category-table/category.component.scss
@@ -23,10 +23,13 @@
       }
     }
 
-    .add-category-button {
-      margin-left: 20px;
-      @media (max-width: 900px) {
-        padding: revert;
+    .actions-container {
+      display: flex;
+      .add-category-button {
+        margin-left: 20px;
+        @media (max-width: 900px) {
+          padding: revert;
+        }
       }
     }
   }
