--- a/src/app/components/prepared-recipe-history/prepared-recipe-history.component.scss
+++ b/src/app/components/prepared-recipe-history/prepared-recipe-history.component.scss
@@ -11,6 +11,10 @@
 .container {
   padding: 10px;
 
+  .tabs {
+    padding: 15px 0;
+  }
+
   .action-dropdown {
     text-align: end;
     position: relative;
