--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,6 +7,94 @@
   margin-bottom: 30px;
   box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
 
+  .navbar__settings {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+
+  .navbar__setting {
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+  }
+
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+  }
+
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 34px;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 18px;
+    width: 18px;
+    left: 4px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 50%;
+  }
+
+  input:checked + .slider {
+    background-color: #2196f3;
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196f3;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+  select {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: white;
+    font-size: 16px;
+  }
+
+  .navbar__label {
+    margin-left: 5px;
+    font-size: 16px;
+    color: white;
+  }
+
   &__icon {
     display: flex;
     gap: 20px;
@@ -23,13 +111,13 @@
     text-decoration: none;
   }
 
-  h2{
+  h2 {
     margin: 0;
     font-size: 24px;
   }
 
-  &__menu{
-    color: aliceblue!important;
+  &__menu {
+    color: aliceblue !important;
     border: 1px solid aliceblue;
   }
 
@@ -56,7 +144,6 @@
   }
 
   &__login {
-    margin-left: auto;
     text-align: right;
     display: flex;
     align-items: center;
